# Dental_Panoramic_Reader

./: .ci_trigger  .gitignore  .gitmodules  Dockerfile  README.md  app.py  development_log.txt  export_classifier.py  requirements.txt  setup_env.py
modules/bone_loss/: .gitignore  Dockerfile  README.md  app.py  development_log.txt  download_dataset.py  download_dataset_roboflow.py  pyproject.toml  requirements.txt  train_classifier.py  train_detector.py  upload_to_hf.py
modules/bone_loss/.github/workflows/: ci.yml
modules/bone_loss/api/: main.py
modules/bone_loss/services/: staging.py
modules/bone_loss/tests/: evaluator.py  test_evaluator.py  test_geometry.py  test_staging.py
modules/bone_loss/utils/: calibration.py  geometry.py  prepare_classifier_data.py  preprocess.py
modules/caries_detection/: .coverage  .dockerignore  .gitignore  Dockerfile  HANDOFF.md  README.md  app.py  data.yaml  data_refined.yaml  development_log.txt  implementation_plan.md  pyproject.toml  requirements.txt  task.md  test_results.txt  train.py
modules/caries_detection/.github/workflows/: ci.yml
modules/caries_detection/archive/reports/: json_list.txt  labels_report.txt
modules/caries_detection/archive/scripts/: analyze_errors.py  check_balance.py  count_labels.py  eval_full_pipeline.py  eval_mode_comparison.py  eval_model.py  eval_refined_comparison.py  eval_with_clahe.py  (+7 more)
modules/caries_detection/src/: analyze_metrics_per_class.py  convert_pediatric.py  data_converter.py  download_data.py  train_refined.py
modules/caries_detection/tests/: test_core.py  test_data_converter.py
(+44 files in other folders)
