[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pano_boneloss"
version = "0.1.0"
description = "Pano BoneLoss Measurement AI System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "torch",
    "torchvision",
    "ultralytics",
    "numpy",
    "opencv-python",
    "Pillow",
    "pandas",
    "onnxruntime",
    "huggingface-hub",
    "scipy",
    "fastapi",
    "uvicorn"
]

[tool.setuptools]
packages = ["models", "services", "utils", "api"]
