[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dentex_caries"
version = "0.1.0"
description = "Dental Panoramic Caries Detection Library using YOLOv11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "ultralytics",
    "streamlit",
    "opencv-python-headless",
    "pillow",
    "pandas",
    "numpy",
    "sahi",
    "grad-cam",
    "huggingface_hub",
    "kagglehub"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dentex_caries*"]
